# terminal-hub

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/auth-core/: Cargo.toml
crates/auth-core/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  app.rs  assets.rs  attach.rs  audit.rs  config.rs  exec_history.rs  files.rs  handlers.rs  hub.rs  lib.rs  main.rs  paths.rs  permissions.rs  session_id.rs  sessions.rs  shares.rs  tls.rs  users.rs  util.rs  ws.rs
crates/server/src/auth/: bootstrap.rs  challenge.rs  extract.rs  middleware.rs  mod.rs  passkey.rs  ratelimit.rs  routes.rs
crates/server/src/db/: mod.rs
crates/server/src/db/migrations/: 0001_initial.sql  0002_permissions.sql
crates/server/src/peer/: federation.rs  fingerprint.rs  handshake.rs  identity.rs  inbound.rs  mod.rs  outbound.rs  pinned_client.rs
crates/server/src/session/: mod.rs  modes.rs  paste.rs  pty.rs
crates/server/static/: app.css  app.js  auth.css  enroll.html  enroll.js  index.html  login.html  login.js
crates/server/static/admin/: admin.css  users.html  users.js
crates/server/tests/: acl.rs  api.rs  attach.rs  auth.rs  http.rs  migrations.rs  sessions.rs  users.rs  ws.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/tmux/: Cargo.toml
crates/tmux-client/: Cargo.toml
crates/tmux-client/src/: conn.rs  lib.rs  protocol.rs
crates/tmux-client/tests/: integration.rs
crates/tmux/src/: lib.rs
deploy/systemd/: README.md  terminal-hub-tmux.service  terminal-hub.env.example  terminal-hub.service
docs/: INSTALL.md
docs/superpowers/: RESUME.md
docs/superpowers/plans/: 2026-05-21-m1-walking-skeleton.md  2026-05-21-m2-multi-session-local.md  2026-05-21-m3-auth-single-user.md  2026-05-21-m4-multi-user-permissions.md  2026-05-21-m5-federation.md  2026-05-21-m6-packaging.md  2026-06-10-rust-rewrite-m1-skeleton.md  2026-06-10-rust-rewrite-m2-tmux-core.md  2026-06-10-rust-rewrite-m3-parity1.md  2026-06-10-rust-rewrite-m4-parity2.md  2026-06-10-rust-rewrite-m5-hardening.md
docs/superpowers/specs/: 2026-05-21-terminal-hub-design.md  2026-06-10-ai-dev-conductor-rust-rewrite-design.md
e2e/: README.md  package.json  playwright.config.ts
e2e/tests/: clipboard.spec.ts
web/static/css/: style.css
web/static/js/: app.js  share.js
web/templates/: login.html  share.html  share_invalid.html  terminal.html
