[workspace]
resolver = "2"
members = ["crates/tmux-client", "crates/server", "crates/cli", "crates/auth-core"]

[workspace.package]
edition = "2021"
rust-version = "1.79"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
