[package]
name = "terminal-hub-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "terminal-hub-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
auth-core = { path = "../auth-core" }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
ssh-key = { version = "0.6", features = ["ed25519"] }
ssh-agent-client-rs = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
directories-next = "2"
url = "2"
