[package]
name = "ai-dev-conductor"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
humantime = "2"
thiserror = { workspace = true }
bcrypt = "0.15"
rand = "0.8"
hex = "0.4"
axum = "0.7"
tower = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
store = { path = "../store" }
rust-embed = "8"
mime_guess = "2"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
