[package]
name = "ai-dev-conductor"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
humantime = "2"
thiserror = { workspace = true }
bcrypt = "0.15"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
subtle = "2"
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
store = { path = "../store" }
tmux = { path = "../tmux" }
rust-embed = "8"
mime_guess = "2"
portable-pty = "0.8"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[dev-dependencies]
tokio-tungstenite = "0.23"
http-body-util = "0.1"
tempfile = "3"
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
